# FORGE

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  TODO.txt  WORKSPACE.bazel  analyze.py  architecture.puml  build.bat  build.sh  clean.bat  doxygen_config  forge.proto  help.py  imgui.ini  linux_Forge  network.proto  profile  run.bat  run.sh  shell.py
docs/: README.md
docs/html/: _application_8h_source.html  _application_event_8h_source.html  _buffer_8h_source.html  _camera_8h_source.html  _editor_8h_source.html  _event_8h_source.html  _framebuffer_8h_source.html  _g_u_i_8h_source.html  _hierarchy_panel_8h_source.html  _input_8h_source.html  _key_codes_8h_source.html  _key_event_8h_source.html  _log_8h_source.html  _math_utils_8h_source.html  _mouse_codes_8h_source.html  _mouse_event_8h_source.html  _panel_8h_source.html  _renderer_8h_source.html  _safety_8h_source.html  _shader_8h_source.html  _simulation_8h_source.html  _static_8h_source.html  _timestep_8h_source.html  _vertex_array_8h_source.html  _viewport_panel_8h_source.html  _window_8h_source.html  annotated.html  class_app_render_event-members.html  class_app_render_event.html  class_app_render_event__inherit__graph.map  class_app_render_event__inherit__graph.md5  class_app_tick_event-members.html  class_app_tick_event.html  class_app_tick_event__coll__graph.md5  class_app_tick_event__inherit__graph.map  class_app_update_event-members.html  class_app_update_event.html  class_app_update_event__coll__graph.md5  class_app_update_event__inherit__graph.map  class_application-members.html  (+250 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_9.js  all_c.js  classes_10.js  classes_2.js  classes_4.js  classes_6.js  classes_a.js  classes_d.js  classes_e.js  classes_f.js  searchdata.js
docs/latex/: _application_8h_source.tex  _application_event_8h_source.tex  _buffer_8h_source.tex  _camera_8h_source.tex  _editor_8h_source.tex  _event_8h_source.tex  _framebuffer_8h_source.tex  _g_u_i_8h_source.tex  _hierarchy_panel_8h_source.tex  _input_8h_source.tex  _key_codes_8h_source.tex  _key_event_8h_source.tex  _log_8h_source.tex  _math_utils_8h_source.tex  _mouse_codes_8h_source.tex  _mouse_event_8h_source.tex  _panel_8h_source.tex  _renderer_8h_source.tex  _safety_8h_source.tex  _shader_8h_source.tex  _simulation_8h_source.tex  _static_8h_source.tex  _timestep_8h_source.tex  _vertex_array_8h_source.tex  _viewport_panel_8h_source.tex  _window_8h_source.tex  annotated.tex  class_app_render_event.eps  class_app_render_event.tex  class_app_render_event__inherit__graph.md5  class_app_tick_event.eps  class_app_tick_event.tex  class_app_tick_event__coll__graph.md5  class_app_update_event.eps  class_app_update_event.tex  class_app_update_event__inherit__graph.md5  class_application.tex  class_buffer_layout.tex  class_camera.tex  class_editor.tex  (+95 more)
examples/: cloud.fsim  earth_moon.fsim  hugecloud.fsim  tinycloud.fsim
platform/: BUILD.bazel
prototyping/: wavelet_sim.py
prototyping/implot_visualizer/: .gitignore  BUILD.bazel  MODULE.bzl  pickle_to_csv.py
prototyping/implot_visualizer/csv_state/: sim_state.csv
prototyping/implot_visualizer/src/: main.cpp
prototyping/jacob_convert_electric_simulation/: AnimationWrapper.py  main.py  n_body_medium.py  simulation.py  test_slider.py  tmp_energy_calc.py
prototyping/new/: bodies.json  config.json  distributed.py  notes.txt  parallel.py  prototype.py  serial.py  single.py  tconf.json  test.py  timer.py  visual.py
prototyping/new/truth/: .simstate
prototyping/new/truth/eight_moon/: config.json
prototyping/new/truth/moon_earth/: bodies.json  config.json
prototyping/planar_n_body/: 2a_butterfly_orbit.json  bodies.json  earth_moon.json  figure_8_orbit.json  py_n_body.py  requirements.txt  rk_45_test.py  test_nufft.py  tmp.txt
scripts/: callgrind_wrapper.sh  cloud.py
src/: main.cpp
src/Core/: Application.cpp  Application.h  Editor.cpp  Editor.h  Forge.cpp  Forge.h  GUI.cpp  GUI.h  Log.cpp  Log.h  Safety.h  Serializer.cpp  Serializer.h  Simulation.h  Structures.h  Timestep.h  Window.cpp  Window.h
src/Events/: ApplicationEvent.h  Event.h  Input.cpp  Input.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
src/Panels/: ControlPanel.cpp  ControlPanel.h  DeveloperPanel.cpp  DeveloperPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  OverviewPanel.cpp  OverviewPanel.h  Panel.cpp  Panel.h  PlanePanel.cpp  PlanePanel.h  PlaybackPanel.cpp  PlaybackPanel.h  ResourcePanel.cpp  ResourcePanel.h  ViewportPanel.cpp  ViewportPanel.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Static.cpp  Static.h  VertexArray.cpp  VertexArray.h
src/Simulation/: Grid.h  Network.cpp  Network.h  Octtree.cpp  Octtree.h  Packets.h  Particle.h  Resource.h  Simulation.cpp  Simulation.h  Sink.h  Source.h
src/Utils/: DialogUtils.cpp  DialogUtils.h  FileUtils.cpp  FileUtils.h  ImGuiUtils.cpp  ImGuiUtils.h  MathUtils.cpp  MathUtils.h  ObjectUtils.cpp  ObjectUtils.h  Quadtree.cpp  Quadtree.h  YamlUtils.h
