load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@aspect_bazel_lib//lib:run_binary.bzl", "run_binary")
# load("//:profile_transition.bzl", "cc_binary_with_profiling")

cc_library(
    name = "ForgeLib",
    srcs = glob([
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "src/**/*.h",
    ]),
    copts = select({
        "@bazel_tools//src/conditions:windows": ["-DWINDOWS_BUILD"],
        "//conditions:default": ["-DLINUX_BUILD"],
    }),
    includes = ["src"],
    linkopts = select({
        "@bazel_tools//src/conditions:windows": ["-DEFAULTLIB:comdlg32.lib"],
        "//conditions:default": [
            "-lglfw",
            "-lvulkan",
            "-ldl",
            "-lpthread",
            "-lX11",
            "-lXxf86vm",
            "-lXrandr",
            "-lXi",
            "-lGL",
            "-lGLU",
            "-lglut",
        ],
    }),
    deps = [
        "//vendor:glad",
        "@spdlog",
        "@yaml-cpp",
    ] + select({
        "@bazel_tools//src/conditions:windows": [
            "//vendor:win_glm",
            "//vendor:win_imgui",
            "//vendor:win_imgui_backend",
        ],
        "//conditions:default": [
            "//vendor:imgui",
            "//vendor:imgui_backend",
        ],
    }),
)

buildifier(
    name = "buildifier",
)

py_test(
    name = "code_audit",
    size = "small",
    srcs = ["//:help.py"],
    args = ["audit"],
    data = glob([
        "src/**/*.cpp",
    ]) + glob([
        "src/**/*.h",
    ]),
    main = "//:help.py",
    stamp = 1,
)

cc_binary(
    name = "forge",
    srcs = ["src/main.cpp"],
    data = [
        "//:assets",
        "//:imgui.ini",
        "//:settings.fconf",
    ],
    deps = [":ForgeLib"],
)


cc_binary(
    name = "forge_profile",
    srcs = ["src/main.cpp"],
    data = [
        "//:assets",
        "//:imgui.ini",
        "//:settings.fconf",
    ],
    deps = [":ForgeLib"],
    copts = ["-pg"],
    linkopts = ["-pg"],
)

genrule(
    name = "profile_forge",
    srcs = [":forge_profile"],
    outs = ["profiles"],
    cmd = """
        echo "potato $(location :forge_profile) potato" &&
        mkdir profiles_callgrind &&
        valgrind --tool=callgrind  --trace-children=yes --callgrind-out-file=profiles_callgrind/callgrind.out.%pD $(location :forge_profile)
    """,
)
