###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "forge",
    repo_name = "forge_src",
    version = "0.9",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.9.3")
bazel_dep(name = "yaml-cpp", version = "0.8.0")
bazel_dep(name = "spdlog", version = "1.11.0")
bazel_dep(name = "grpc", version = "1.69.0")
