cc_library(
    name = "linux_OrbitViz_library",
    # visibility = ["//visibility:public"],
    srcs = glob([
        "src/*.cpp",
    ]),
    hdrs = glob([
        "src/*.h",
    ]),
    copts = ["-DLINUX_BUILD"],
    includes = ["src"],
    linkopts = [
        "-lglfw",
        "-lX11",
        "-lXxf86vm",
        "-lXrandr",
        "-lXi",
        "-lGL",
        "-lGLU",
        "-lglut",
    ],
    deps = [
        "//vendor:imgui",
        "//vendor:imgui_backend",
        "@spdlog",
        "@yaml-cpp",
    ],
)

cc_binary(
    name = "linux_OrbitViz",
    srcs = ["src/main.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":linux_OrbitViz_library",
    ],
)
